docs/pages/versions/v57.0.0/sdk/ui/swift-ui/button.mdx
---
title: Button
description: A SwiftUI Button component for displaying native buttons.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Button`](../universal/button) — it renders the appropriate native component per platform.

Expo UI Button matches the official SwiftUI [Button API](https://developer.apple.com/documentation/swiftui/button) and supports styling via the [`buttonStyle`](modifiers/#buttonstylestyle), [`controlSize`](modifiers/#controlsizesize), and other modifiers.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/button/ios-light.webp"
  darkSrc="/static/images/expo-ui/button/ios-dark.webp"
  alt="Two iOS 26 Liquid Glass buttons — a glassProminent Get started above a glass Learn more"
/>

## Installation

<APIInstallSection />

## Usage

### Basic button

<ComponentExample
  title="BasicButtonExample.tsx"
  src="/static/images/expo-ui/examples/button-basic-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-basic-ios-dark.webp"
  alt="A blue Press me button">

```tsx
import { Host, Button } from '@expo/ui/swift-ui';

export default function BasicButtonExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Button label="Press me" onPress={() => alert('Pressed!')} />
    </Host>
  );
}
```

</ComponentExample>

### Button with system image

<ComponentExample
  title="ButtonWithImageExample.tsx"
  src="/static/images/expo-ui/examples/button-with-image-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-with-image-ios-dark.webp"
  alt="A Download button with a downward arrow icon before the label">

```tsx
import { Host, Button } from '@expo/ui/swift-ui';

export default function ButtonWithImageExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Button
        label="Download"
        systemImage="arrow.down.circle"
        onPress={() => alert('Downloading...')}
      />
    </Host>
  );
}
```

</ComponentExample>

### Icon-only button

Use the `labelStyle` modifier to show only the icon while keeping the label for accessibility.

<ComponentExample
  title="IconOnlyButtonExample.tsx"
  src="/static/images/expo-ui/examples/button-icon-only-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-icon-only-ios-dark.webp"
  alt="A gear icon button with no visible label">

```tsx
import { Host, Button } from '@expo/ui/swift-ui';
import { labelStyle } from '@expo/ui/swift-ui/modifiers';

export default function IconOnlyButtonExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Button
        label="Settings"
        systemImage="gear"
        modifiers={[labelStyle('iconOnly')]}
        onPress={() => alert('Settings')}
      />
    </Host>
  );
}
```

</ComponentExample>

### Button styles

Use the `buttonStyle` modifier to change the button's appearance. Available styles are: `bordered`, `borderedProminent`, `borderless`, `plain`, `glass`, and `glassProminent`.

> **Note:** The `glass` and `glassProminent` styles are only available on iOS 26+ when built with Xcode 26.

<ComponentExample
  title="ButtonStylesExample.tsx"
  src="/static/images/expo-ui/examples/button-styles-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-styles-ios-dark.webp"
  alt="Four buttons showing the bordered, bordered prominent, borderless, and plain styles">

```tsx
import { Host, Button, VStack } from '@expo/ui/swift-ui';
import { buttonStyle } from '@expo/ui/swift-ui/modifiers';

export default function ButtonStylesExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={8}>
        <Button
          label="Bordered"
          modifiers={[buttonStyle('bordered')]}
        />
        <Button
          label="Bordered Prominent"
          modifiers={[buttonStyle('borderedProminent')]}
        />
        <Button
          label="Borderless"
          modifiers={[buttonStyle('borderless')]}
        />
        <Button label="Plain" modifiers={[buttonStyle('plain')]} />
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

### Button border shape

Use the `buttonBorderShape` modifier to change the shape of a styled button. Available shapes are: `automatic`, `capsule`, `roundedRectangle`, and `circle` (iOS 17+).

<ComponentExample
  title="ButtonBorderShapeExample.tsx"
  src="/static/images/expo-ui/examples/button-border-shape-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-border-shape-ios-dark.webp"
  alt="A circular glass button holding a heart icon">

```tsx
import { Host, Button } from '@expo/ui/swift-ui';
import {
  buttonStyle,
  controlSize,
  buttonBorderShape,
  labelStyle,
} from '@expo/ui/swift-ui/modifiers';

export default function ButtonBorderShapeExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Button
        label="Favorite"
        systemImage="heart.fill"
        modifiers={[
          buttonStyle('glass'),
          controlSize('extraLarge'),
          labelStyle('iconOnly'),
          buttonBorderShape('circle'),
        ]}
        onPress={() => alert('Favorited')}
      />
    </Host>
  );
}
```

</ComponentExample>

### Control sizes

Use the `controlSize` modifier to adjust the button size. Available sizes are: `mini`, `small`, `regular`, `large`, and `extraLarge`.

> **Note:** The `extraLarge` size is only available on iOS 17+.

<ComponentExample
  title="ControlSizeExample.tsx"
  src="/static/images/expo-ui/examples/button-control-sizes-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-control-sizes-ios-dark.webp"
  alt="Four bordered buttons at the mini, small, regular, and large sizes">

```tsx
import { Host, Button, VStack } from '@expo/ui/swift-ui';
import {
  buttonStyle,
  controlSize,
} from '@expo/ui/swift-ui/modifiers';

export default function ControlSizeExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={8}>
        <Button
          label="Mini"
          modifiers={[controlSize('mini'), buttonStyle('bordered')]}
        />
        <Button
          label="Small"
          modifiers={[
            controlSize('small'),
            buttonStyle('bordered'),
          ]}
        />
        <Button
          label="Regular"
          modifiers={[
            controlSize('regular'),
            buttonStyle('bordered'),
          ]}
        />
        <Button
          label="Large"
          modifiers={[
            controlSize('large'),
            buttonStyle('bordered'),
          ]}
        />
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

### Button roles

Use the `role` prop to indicate the semantic role of the button. Available roles are: `default`, `cancel`, and `destructive`.

<ComponentExample
  title="ButtonRolesExample.tsx"
  src="/static/images/expo-ui/examples/button-roles-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-roles-ios-dark.webp"
  alt="Three buttons showing the default, cancel, and red destructive roles">

```tsx
import { Host, Button, VStack } from '@expo/ui/swift-ui';

export default function ButtonRolesExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={8}>
        <Button label="Default" role="default" />
        <Button label="Cancel" role="cancel" />
        <Button label="Delete" role="destructive" />
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

### Tinted button

Use the `tint` modifier to change the button's color.

<ComponentExample
  title="TintedButtonExample.tsx"
  src="/static/images/expo-ui/examples/button-tinted-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-tinted-ios-dark.webp"
  alt="A Custom Color button tinted tomato red">

```tsx
import { Host, Button } from '@expo/ui/swift-ui';
import { tint } from '@expo/ui/swift-ui/modifiers';

export default function TintedButtonExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Button label="Custom Color" modifiers={[tint('#FF6347')]} />
    </Host>
  );
}
```

</ComponentExample>

### Disabled button

Use the `disabled` modifier to disable the button.

<ComponentExample
  title="DisabledButtonExample.tsx"
  src="/static/images/expo-ui/examples/button-disabled-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-disabled-ios-dark.webp"
  alt="A grayed out Disabled button">

```tsx
import { Host, Button } from '@expo/ui/swift-ui';
import { disabled } from '@expo/ui/swift-ui/modifiers';

export default function DisabledButtonExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Button label="Disabled" modifiers={[disabled()]} />
    </Host>
  );
}
```

</ComponentExample>

### Custom label content

You can pass custom components as `children` for more complex button label content.

<ComponentExample
  title="CustomContentExample.tsx"
  src="/static/images/expo-ui/examples/button-custom-content-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/button-custom-content-ios-dark.webp"
  alt="A button with a folder icon stacked above the label Folder">

```tsx
import {
  Host,
  Button,
  VStack,
  Image,
  Text,
} from '@expo/ui/swift-ui';

export default function CustomContentExample() {
  return (
    <Host style={{ flex: 1 }}>
      <Button onPress={() => console.log('Pressed!')}>
        <VStack spacing={4}>
          <Image systemName="folder" />
          <Text>Folder</Text>
        </VStack>
      </Button>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Button } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/button"
  apiName="Button"
/>
